tests/ui/nll/issue-57843.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57843.rs:25:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 bool)` must implement `FnOnce<(&'1 bool,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 bool,)>`, for some specific lifetime `'2`

error: aborting due to 1 previous error

